proper filtering of detailed samples working -- all comments implemented